--- a/analysis/index.Rmd
+++ b/analysis/index.Rmd
@@ -8,4 +8,4 @@ editor_options:
   chunk_output_type: console
 ---
 
-Welcome to my research website.
+1. [Data visualization with ggplot2](01-ggplot2.html)
