--- a/analysis/index.Rmd
+++ b/analysis/index.Rmd
@@ -10,3 +10,4 @@ editor_options:
 
 1. [Data visualization with ggplot2](01-ggplot2.html)
 1. [Workflow basics](02-workflow-basics.html)
+1. [Data transformation with dplyr](03-dplyr.html)
