--- a/analysis/03-dplyr.Rmd
+++ b/analysis/03-dplyr.Rmd
@@ -232,3 +232,264 @@ The tidyselect helpers ignore case by default (`ignore.case = TRUE`):
 formals(contains)$ignore.case
 select(flights, contains("TIME", ignore.case = FALSE))
 ```
+
+## Add new variables with `mutate()`
+
+p. 58
+
+> Currently `dep_time` and `sched_dep_time` are convenient to look at, but
+    hard to compute with because they're not really continuous numbers. 
+    Convert them to a more convenient representation of number of minutes
+    since midnight.
+
+```{r}
+select(flights, dep_time, sched_dep_time)
+transmute(flights, dep_time, sched_dep_time,
+          dep_time_min = dep_time %/% 100 * 60 + dep_time %% 100,
+          sched_dep_time_min = sched_dep_time %/% 100 * 60 + sched_dep_time %% 100)
+```
+
+> Compare `air_time` with `arr_time - dep_time`. What do you expect to see?
+    What do you see? What do you need to do to fix it?
+
+I expect them to be the same.
+
+```{r}
+transmute(flights, air_time, arr_time - dep_time)
+```
+
+`arr_time - dep_time` is greater than `air_time`
+
+```{r}
+transmute(flights, air_time, total = arr_time - dep_time, total - air_time)
+```
+
+`air_time` is in minutes, but the delays are in HHMM format. I first need to
+convert the delays to minutes from midnight, as above. I am pretty sure the
+departure and arrival times are reported using the same timezone.
+
+```{r}
+minutes <- transmute(flights,
+                     dep_time,
+                     dep_time_min = dep_time %/% 100 * 60 + dep_time %% 100,
+                     arr_time,
+                     arr_time_min = arr_time %/% 100 * 60 + arr_time %% 100,
+                     air_time,
+                     total = arr_time_min - dep_time_min,
+                     concord = air_time == total)
+minutes
+```
+
+I checked to see if `air_time` was computed from the scheduled departure and
+arrival times, but these didn't match either.
+
+```{r}
+minutes <- transmute(flights,
+                     sched_dep_time,
+                     sched_dep_time_min = sched_dep_time %/% 100 * 60 + sched_dep_time %% 100,
+                     sched_arr_time,
+                     sched_arr_time_min = sched_arr_time %/% 100 * 60 + sched_arr_time %% 100,
+                     air_time,
+                     total = sched_arr_time_min - sched_dep_time_min,
+                     concord = air_time == total)
+minutes
+```
+
+Doing some research online
+([source](https://jrnold.github.io/r4ds-exercise-solutions/transform.html#add-new-variables-with-mutate)),
+it appears that these won't match up since `air_time` does not include taxi-ing.
+
+> Compare `dep_time`, `sched_dep_time`, and `dep_delay`. How would you
+    expect those three numbers to be related?
+
+```{r}
+transmute(flights, dep_time, sched_dep_time, dep_delay)
+```
+
+I expect `dep_delay` to be the number of minutes between `dep_time` and
+`sched_dep_time`.
+
+```{r}
+transmute(flights, dep_time, sched_dep_time, dep_delay,
+          dep_time_min = dep_time %/% 100 * 60 + dep_time %% 100,
+          sched_dep_time_min = sched_dep_time %/% 100 * 60 + sched_dep_time %% 100,
+          expected_delay = dep_time_min - sched_dep_time_min,
+          concond = expected_delay == dep_delay)
+```
+
+> Find the 10 most delayed flights using a ranking function. How do you want 
+    to handle ties? Carefully read the documentation for `min_rank()`.
+
+Use `desc()` with `min_rank()` so that the most delayed flight is ranked first.
+
+```{r}
+delayed <- transmute(flights, carrier, flight, dep_delay, rank = min_rank(desc(dep_delay)))
+arrange(delayed, rank)
+```
+
+The `NA`'s are left as is:
+
+```{r}
+sum(is.na(delayed$dep_delay))
+sum(is.na(delayed$rank))
+```
+
+> What does `1:3 + 1:10` return? Why?
+
+```{r}
+1:3 + 1:10
+```
+
+The `1:3` is recycled. Thus it gets used 3 times, and then just the final `1`.
+Thus it is equivalent to the following:
+
+```{r}
+c(1:3 + 1:3, 1:3 + 4:6, 1:3 + 7:9, 1 + 10)
+```
+
+> What trigonometric functions does R provide?
+
+```{r}
+?Trig
+```
+
+```
+cos(x)
+sin(x)
+tan(x)
+
+acos(x)
+asin(x)
+atan(x)
+atan2(y, x)
+
+cospi(x)
+sinpi(x)
+tanpi(x)
+```
+
+## Group summaries with `summarize()`
+
+p. 72
+
+> Brainstorm at least 5 different ways to assess the typical delay 
+    characteristics of a group of flights. Consider the following scenarios:
+    
+    * A flight is 15 minutes early 50% of the time, and 15 minutes late 50% of 
+      the time.
+      
+    * A flight is always 10 minutes late.
+
+    * A flight is 30 minutes early 50% of the time, and 30 minutes late 50% of 
+      the time.
+      
+    * 99% of the time a flight is on time. 1% of the time it's 2 hours late.
+    
+    Which is more important: arrival delay or departure delay?
+
+> Come up with another approach that will give you the same output as 
+    `not_cancelled %>% count(dest)` and 
+    `not_cancelled %>% count(tailnum, wt = distance)` (without using 
+    `count()`).
+
+```{r}
+not_cancelled <- flights %>% 
+  filter(!is.na(dep_delay), !is.na(arr_delay))
+not_cancelled %>% count(dest)
+not_cancelled %>%
+  group_by(dest) %>%
+  summarize(n = n())
+not_cancelled %>% count(tailnum, wt = distance)
+not_cancelled %>%
+  group_by(tailnum) %>%
+  summarize(n = sum(distance))
+```
+
+> Our definition of cancelled flights (`is.na(dep_delay) | is.na(arr_delay)`
+    ) is slightly suboptimal. Why? Which is the most important column?
+
+I think `arr_delay` is more important. If a flight takes off on time, but
+lands at a different airport, that's a big issue.
+
+There are 1,175 flights that have a `dep_delay` but not a `arr_delay`.
+
+```{r}
+sum(is.na(flights$dep_delay) | is.na(flights$arr_delay))
+sum(is.na(flights$dep_delay))
+sum(is.na(flights$arr_delay))
+sum(xor(is.na(flights$dep_delay), is.na(flights$arr_delay)))
+sum(is.na(flights$dep_delay) & !is.na(flights$arr_delay))
+sum(!is.na(flights$dep_delay) & is.na(flights$arr_delay))
+```
+
+Thus I guess a more strict definintion of "cancelled" would be `is.na(dep_delay)`
+and the few cases where the plane departs but doesn't arrive could be classified
+as "no arrivals" (presumably this includes redirections and crashes).
+
+> Look at the number of cancelled flights per day. Is there a pattern?
+    Is the proportion of cancelled flights related to the average delay?
+
+```{r}
+flights %>%
+  mutate(cancelled = is.na(dep_delay)) %>%
+  group_by(year, month, day) %>%
+  summarize(n = n(),
+            prop_canc = sum(cancelled) / n,
+            avg_delay = mean(dep_delay, na.rm = TRUE)) %>%
+  ggplot(aes(x = avg_delay, y = prop_canc)) +
+  geom_point(alpha = 0.25) +
+  geom_smooth()
+```
+
+There is a slight pattern, but it's mostly driven by the days where the average
+delay is greater than 10 minutes.
+
+> Which carrier has the worst delays? Challenge: can you disentangle the
+    effects of bad airports vs. bad carriers? Why/why not? (Hint: think about
+    `flights %>% group_by(carrier, dest) %>% summarise(n())`)
+
+```{r}
+flights %>%
+  group_by(carrier) %>%
+  summarize(mean_delay = mean(arr_delay, na.rm = TRUE)) %>%
+  arrange(desc(mean_delay))
+```
+
+```{r}
+flights %>% group_by(carrier, dest) %>% summarise(n())
+```
+
+> What does the `sort` argument to `count()` do. When might you use it?
+
+Sorts by value of `n`. Can be used instead of piping to `arrange()`.
+
+## Group mutates (and filters)
+
+p. 75
+
+> Refer back to the lists of useful mutate and filtering functions. 
+    Describe how each operation changes when you combine it with grouping.
+
+> Which plane (`tailnum`) has the worst on-time record?
+
+> What time of day should you fly if you want to avoid delays as much
+    as possible?
+    
+> For each destination, compute the total minutes of delay. For each 
+    flight, compute the proportion of the total delay for its destination.
+    
+> Delays are typically temporally correlated: even once the problem that
+    caused the initial delay has been resolved, later flights are delayed 
+    to allow earlier flights to leave. Using `lag()`, explore how the delay
+    of a flight is related to the delay of the immediately preceding flight.
+    
+> Look at each destination. Can you find flights that are suspiciously
+    fast? (i.e. flights that represent a potential data entry error). Compute
+    the air time a flight relative to the shortest flight to that destination.
+    Which flights were most delayed in the air?
+    
+> Find all destinations that are flown by at least two carriers. Use that
+    information to rank the carriers.
+
+> For each plane, count the number of flights before the first delay 
+    of greater than 1 hour.
