--- a/analysis/index.Rmd
+++ b/analysis/index.Rmd
@@ -11,3 +11,6 @@ editor_options:
 1. [Data visualization with ggplot2](01-ggplot2.html)
 1. [Workflow basics](02-workflow-basics.html)
 1. [Data transformation with dplyr](03-dplyr.html)
+1. Workflow: Scripts (no exercises)
+1. [Exploratory data analysis](05-eda.Rmd)
+1. Workflow: Projects (no exercises)
