--- a/analysis/index.Rmd
+++ b/analysis/index.Rmd
@@ -16,3 +16,4 @@ editor_options:
 1. Workflow: Projects (no exercises)
 1. [Tibbles with tibble](07-tibble.html)
 1. [Data import with readr](08-readr.html)
+1. [Tidy data with tidyr](09-tidyr.html)
